--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "test-sirup",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://hugoboxfr.github.io/react_livre_scolaire/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -18,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
